force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master switch controlling whether events are processed.</description>
    <inlineHelpText>Enables or disables the Zoom webhook integration globally.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>