force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Allow_Reprocessing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Reprocessing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows retry of failed events.</description>
    <inlineHelpText>Enables support workflows.</inlineHelpText>
    <label>Allow Reprocessing</label>
    <type>Checkbox</type>
</CustomField>