force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Create_Time_Entries__c.field-meta.xml
<CustomField>
    <fullName>Create_Time_Entries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Separates processing from record creation.</description>
    <inlineHelpText>Enables creation of Time Entry records.</inlineHelpText>
    <label>Create Time Entries</label>
    <type>Checkbox</type>
</CustomField>