force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Default_Debrief_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Default_Debrief_Minutes__c</fullName>
    <description>Used when no override exists.</description>
    <inlineHelpText>Default debrief time added to meetings.</inlineHelpText>
    <label>Default Debrief Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>