force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Minimum_Meeting_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Meeting_Minutes__c</fullName>
    <description>Filters out short meetings.</description>
    <inlineHelpText>Minimum duration required to create time.</inlineHelpText>
    <label>Minimum Meeting Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>