force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Only_Active_Projects__c.field-meta.xml
<CustomField>
    <fullName>Only_Active_Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enforces project eligibility rules.</description>
    <inlineHelpText>Restricts processing to active projects.</inlineHelpText>
    <label>Only Active Projects</label>
    <type>Checkbox</type>
</CustomField>