force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Require_Project_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Require_Project_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents fallback or guessing.</description>
    <inlineHelpText>Requires mapping for processing.</inlineHelpText>
    <label>Require Project Mapping</label>
    <type>Checkbox</type>
</CustomField>