force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Validate_Signature__c.field-meta.xml
<CustomField>
    <fullName>Validate_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether request authenticity validation is enforced.</description>
    <inlineHelpText>Determines whether incoming Zoom webhook signatures must be validated before processing.</inlineHelpText>
    <label>Validate Signature</label>
    <type>Checkbox</type>
</CustomField>