force-app/main/default/objects/Zoom_Webhook_Config__mdt/fields/Webhook_Secret_Token__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret_Token__c</fullName>
    <description>Zoom app Secret Token for URL validation (HMAC) and optional x-zm-signature verification.</description>
    <inlineHelpText>From Zoom Marketplace app — used when Validate Signature is enabled and for endpoint.url_validation encryptedToken.</inlineHelpText>
    <label>Webhook Secret Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>